--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
 	<artifactId>kakfa-consumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kakfa-consumer</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring Boot Kafka Consumer Example</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<protobuf.version>3.11.4</protobuf.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
